#2338 - fix pagination overlapping on tablet screen width

--- a/packages/scandipwa/src/route/CategoryPage/CategoryPage.style.scss
+++ b/packages/scandipwa/src/route/CategoryPage/CategoryPage.style.scss
@@ -128,6 +128,7 @@
 
         @include tablet {
             grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
         }
 
         @include tablet-portrait {
